methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  baisseBrosse();
  ^FlowerPot:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  leveBrosse();
  ^